--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "gitignore": "^0.7.0",
     "mssql": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
